@@ -9,6 +9,8 @@ CAUTION: The ElasticSearch server will no longer be embedded. Instead an externa
 
 icon:plus[] Core: The OrientDB graph database will be updated to version 3.0
 
+icon:check[] Core: Fixed some bugs which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.
+
 [[v0.13.1]]
 == 0.13.1 (05.01.2018)
 
